--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="./stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> 
 
-  <script src="js/main.js" type="module" defer></script>
+  <script src="./js/main.js" type="module" defer></script>
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/126/126482.png">
 </head>
 <body>
