--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="./preconnect" href="https://fonts.googleapis.com">
-  <link rel="./preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Github Favorites</title>
