--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Github Favorites</title>
  
   <link rel="./stylesheet" href="https://welerson.github.io/github-favorites/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="./stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="./stylesheet"/> 
 
   <script src="https://welerson.github.io/github-favorites/js/main.js" type="module" defer></script>
   <link rel="./shortcut icon" href="https://cdn-icons-png.flaticon.com/512/126/126482.png">
