--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Github Favorites</title>
  
-  <link rel="./stylesheet" href="./style.css">
+  <link rel="./stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="./stylesheet"> 
 
   <script src="./js/main.js" type="module" defer></script>
