--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="./preconnect" href="https://fonts.googleapis.com">
-  <link rel="./preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="./preconnect" href="./https://fonts.googleapis.com">
+  <link rel="./preconnect" href="./https://fonts.gstatic.com" crossorigin>
  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Github Favorites</title>
  
   <link rel="stylesheet" href="./style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> 
+  <link href="./https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="./stylesheet"> 
 
   <script src="./js/main.js" type="module" defer></script>
-  <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/126/126482.png">
+  <link rel="./shortcut icon" href="./https://cdn-icons-png.flaticon.com/512/126/126482.png">
 </head>
 <body>
   <div id="app">
